--- a/style.css
+++ b/style.css
@@ -4,11 +4,17 @@ body{
 }
 
 .container{
-    width: 100%;
+    /* width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+     */
+     display: flex;     
+     flex-flow: row wrap;
 }
 
 .cols-item{
     width: 33.333%;
-    display: inline-block;        
+    /* display: inline-block;     */
 }
 
