--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
-body{
+body, html{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #ffffff;    
+    background-color: #ffffff;
+    height: 100%;
+    min-height: 100%;        
 }
 
 .container{
-    /* width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-     */
-     display: flex;     
+     display: flex;          
      flex-flow: row wrap;
+     align-items: center;
+     justify-content: center;     
+     height: 100%;
+     min-height: 100%;        
 }
 
 .cols-item{
