--- a/style2.css
+++ b/style2.css
@@ -7,6 +7,7 @@ img{
     height: 50%;
     width: 50%;
     padding: 1px;
+    border-radius: 5px 5px 0 0;
 }
 
 p{
@@ -29,4 +30,11 @@ p{
     height: 20%;
     width: 20%;
     float: right;
+}
+
+h3{
+    display: table-cell;
+    text-align: justify;
+    padding: 35px;
+    color: #aaaaaa;
 }
